# Virtual-manuscript-reviewer

./: .gitignore  README.md  VMR_Launcher.command  build_app.py  pyproject.toml
src/virtual_manuscript_reviewer/: __about__.py  __init__.py  agent.py  cli.py  constants.py  gui.py  manuscript.py  pdf_generator.py  prompts.py  reviewer_generator.py  revision_tracker.py  run_review.py  scientific_mentor.py  utils.py
